fixed the button alignment

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ section {
 
 .profile-pic {
   border-radius: 50%;
-  border: grey 0.1rem solid
+  border: grey 0.1rem solid;
 }
 
 .section__text {
@@ -310,7 +310,6 @@ section {
   justify-content: center;
   flex-direction: column;
   padding-top: 2.5rem;
-  
 }
 
 .about-containers,
@@ -421,6 +420,8 @@ article .icon {
 .project-img {
   border-radius: 2rem;
   height: 35vh;
+  border-color: black;
+  border: 0.1rem solid;
 }
 
 .project-1-title {
@@ -430,6 +431,11 @@ article .icon {
 .iframe-container {
   height: 500px;
   width: 100%;
+}
+
+.project-1-line-title {
+  padding-top: 10rem;
+  padding-bottom: 1.375rem;
 }
 
 .project-title {
@@ -472,7 +478,7 @@ article .icon {
   justify-content: center;
   border-radius: 2rem;
   border: #6b3666 0.1rem solid;
-  border-color:#6b3666;
+  border-color: #6b3666;
   background: #fff6ff;
   margin: 2rem auto;
   padding: 0.5rem;
